[package]
name = "rbsvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
ethers = "2.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
hex = "0.4.3"
eyre = "0.6"

[dev-dependencies]
reqwest = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rbsvc"